Added comments to 33 functions across 4 files